--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
     height: 100%;
     width: 80%;
     font-family: sans-serif;
-    background-color: #333d54;
+    background-color: #00ffd0;
     border-radius: 10px;
     color: palevioletred;
 }
